--- a/src/app/draft-search/draft-search/draft-search.component.css
+++ b/src/app/draft-search/draft-search/draft-search.component.css
@@ -7,7 +7,7 @@
 .panel-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .crack-panel {
