--- a/src/app/draft-search/draft-search/draft-search.component.html
+++ b/src/app/draft-search/draft-search/draft-search.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   
-  <div *ngIf='isPaginated && totalDraftCount && totalDraftCount > pageSize'>
+  <div *ngIf='totalDraftCount && totalDraftCount > pageSize'>
 
       <pagination [totalItems]="totalDraftCount" [(ngModel)]="pageNumber" [maxSize]="10" 
                   [itemsPerPage]="pageSize" class="pagination-sm"
