--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,12 @@
-#footer {
+footer {
   background-color: #333333;
   color: #CCCCCC;
   text-align: center;
-  margin-top: 50px;
   min-height: 150px;
-  padding: 30px;
+  padding: 1rem;
+
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
