--- a/src/app/draft-info/draft-pool/draft-pool.component.html
+++ b/src/app/draft-info/draft-pool/draft-pool.component.html
@@ -38,8 +38,10 @@
       <app-card *ngFor='let card of cardColumn; let cardIndex = index'
         [cardName]='card.name'
         [stacked]='cardIndex !== cardColumn.length-1'
+        [pile]='true'
         (click)='onCardClicked(card.name, true)'
         [clickable]='true'
+        (mouseover)='onMouseOver(card)'
       >
       </app-card>
     </div>
@@ -64,8 +66,19 @@
         [stacked]='cardIndex !== cardColumn.length-1'
         (click)='onCardClicked(card.name, false)'
         [clickable]='true'
+        (mouseover)='onMouseOver(card)'
+        [pile]='true'
       >
       </app-card>
     </div>
   </div>
 </div>
+<app-card
+  class='hovered-card'
+  [ngClass]='{left: isLeft, right: !isLeft}'
+  *ngIf='hoveredCard && isColumnView'
+  [cardName]='hoveredCard'
+  [hoverCard]='true'
+  [pile]='true'
+  (mouseover)='onHoverCardMouseOver()'>
+</app-card>
