bug fix: clickable thumbnails

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -11,6 +11,7 @@
   src={{cardImageUrl}}
   alt={{cardName}}
   title={{altTitle}}
+  (click)='onClick()'
   >
 <h1 *ngIf='pickrate'>{{pickrate}}%</h1>
 <!--</div>-->
