--- a/src/app/draft-info/draft-picks/draft-picks.component.html
+++ b/src/app/draft-info/draft-picks/draft-picks.component.html
@@ -5,6 +5,7 @@
       [cardName]='card'
       [index]='pickIndex'
       [picked]='draftData.draft.picks[packIndex]===pickIndex'
+      [draftPicks]='true'
     >
     <hr *ngIf='packIndex < 3'>
     </app-card>
