aesthetics and styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="container">
-    <a class='navbar-brand' [routerLink]="['']"><i class="fa fa-cubes" aria-hidden="true"></i> Crack a Draft</a>
+    <a class='navbar-brand stylized-font' [routerLink]="['']"><img src="assets/crackadraft_logo_small.png" class="small-logo" alt="logo"> Crack a Draft</a>
     <ul class="nav navbar-nav navbar-right">        
       <li><a [routerLink]="['']">Home</a></li>
       <li><a [routerLink]="['/donate']">Donate</a></li>
