--- a/src/app/draft-info/draft-info/draft-info.component.html
+++ b/src/app/draft-info/draft-info/draft-info.component.html
@@ -8,7 +8,7 @@
   <div *ngIf='draftData'>
     <h2>{{draftData.draft.drafter}}'s {{draftData.format.name}} Draft</h2>
     <p><a [routerLink]="['/crack', draftData.draft._id]">
-      <i class="fa fa-cubes" aria-hidden="true"></i> Crack this draft</a>
+      <img src="assets/crackadraft_logo_small.png" class="small-logo" alt="logo"> Crack this draft</a>
   </div>
 </div>
 <div class="container-fluid">
