--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <h1><i class="fa fa-cubes" aria-hidden="true"></i> Crack a Draft</h1>
+    <h1 class='stylized-font'><img src="assets/crackadraft_logo.png" alt="">Crack a Draft</h1>
     <p>Cracking a pack is opening a booster pack to discuss what we would pick in a draft. 
       Here in Crack a Draft we use real MTGO drafts submitted by you to simulate not only pack 1 pick 1,
       but the first 8 picks of a draft.</p>
@@ -9,7 +9,7 @@
     <div class="col-md-6">
       <div class="panel top-panel panel-default">
         <div class="panel-heading">
-          <i class="fa fa-cubes" aria-hidden="true"></i> Crack a Draft
+          <img src="assets/crackadraft_logo_small.png" class="small-logo" alt="logo"> Crack a Draft
         </div>
         <div class="panel-body top-panel-body">
           <p>Do a random Crack a Draft by selecting your favorite format below or go All Random if you can't decide!</p>
