--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 html {
   height: 100%;
   box-sizing: border-box;
@@ -14,4 +13,13 @@ body {
 .panel-group .panel {
     margin-top: 10px;
     margin-bottom: 20px;
+}
+
+.small-logo {
+  float: left;
+  margin-top: -5px;
+}
+
+.stylized-font {
+  font-family: 'Hammersmith One', sans-serif;
 }
