changed to winning records only

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
       <accordion>
         <accordion-group (click)='onClickAccordion()' [isOpen]='isAccordionOpen'>
           <div accordion-heading>
-            <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> Pro Tour Amonkhet Drafts
+            <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> Pro Tour Amonkhet Drafts with Winning Records
             <i class='pull-right float-xs-right glyphicon'
       [ngClass]="{'glyphicon-chevron-down': isAccordionOpen, 'glyphicon-chevron-right': !isAccordionOpen}"></i>
           </div>          
