--- a/src/app/crack/crackdraft/crackdraft.component.html
+++ b/src/app/crack/crackdraft/crackdraft.component.html
@@ -8,7 +8,7 @@
   <div class="pack">
     <div class="container">
       <h2>{{draftData.format.name}} Crack a Draft</h2>
-      <h3 id='pickMsg'>Pick {{currentPick}}/8:</h3>
+      <h3>Pick {{currentPick}}/8:</h3>
     </div>
     <div class="container-fluid">
       <app-card *ngFor='let card of draftData.draft.packs[currentPick-1]; let pickIndex = index'
