--- a/src/app/draft-search/draft-badge/draft-badge.component.html
+++ b/src/app/draft-search/draft-badge/draft-badge.component.html
@@ -9,8 +9,8 @@
           {{draft.format.name}} Draft
         </a> 
       <span class="badge" 
-            *ngIf='draft.draft.cracks.length > 0'
-            tooltip='Number of Crack a Drafts done for this draft'>{{draft.draft.cracks.length}}</span></p>
+            *ngIf='draft.draft.numCracks > 0'
+            tooltip='Number of Crack a Drafts done for this draft'>{{draft.draft.numCracks}}</span></p>
     <p>by <a (click)='onButtonClick(draft.draft.drafter)'>{{draft.draft.drafter}}</a></p>
     <p><a [routerLink]="['/crack', draft.draft._id]"><img src="assets/crackadraft_logo_small.png" class="small-logo" alt="logo">Crack</a> | 
        <a [routerLink]="['/draft', draft.draft._id]"><i class="fa fa-list-alt" aria-hidden="true"></i> View</a></p>
