support for faceCard attribute and reduced api call sizes

--- a/src/app/draft-search/draft-badge/draft-badge.component.html
+++ b/src/app/draft-search/draft-badge/draft-badge.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default crack-panel" >
   <div class="panel-body crack-panel-body">
     <a [routerLink]="['/crack', draft.draft._id]"><app-card
-      [cardName]='draft.draft.packs[0][13]' 
+      [cardName]='draft.draft.faceCard'
       [cutout]='true'
       altTitle='Crack this draft!'></app-card></a>
     <p><a [routerLink]="['/crack', draft.draft._id]" 
