--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,14 +59,14 @@
     <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading clickable" (click)='onClickAccordion()'>
-          <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> Pro Tour Amonkhet Drafts with Winning Records
+          <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> 2017 World Champioship Ixalan Drafts with Winning Records
           <i class='pull-right float-xs-right glyphicon'
       [ngClass]="{'glyphicon-chevron-down': isAccordionOpen, 'glyphicon-chevron-right': !isAccordionOpen}"></i>
         </div>
         <div class="panel-body" *ngIf='isAccordionOpen'>
           <ul class='list-unstyled'>
-            <li>3-0: Gabriel Nassif and Eric Froehlich</li>
-            <li>2-1: Lee Shi Tian, Marco Cammilluzzi, Martin Juza, Gerard Fabiano, Christian Calcano and Chris Fennell</li>
+            <li>3-0: William Jensen</li>
+            <li>2-1: Javier Dominguez, Shota Yasooka, Samuel Black</li>
           </ul>
           <div class="container-fluid">
             <div class="row">
