updated for PT RIX day 2

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,8 +65,8 @@
         </div>
         <div class="panel-body" *ngIf='isAccordionOpen'>
           <ul class='list-unstyled'>
-            <li>3-0: Collin Rountree</li>
-            <li>2-1: Benjamin Weitz, Israel Sanchez, Joseph Kambourakis</li>
+            <li>3-0: Collin Rountree, Jon Stern</li>
+            <li>2-1: Benjamin Weitz, Israel Sanchez, Joseph Kambourakis, Javier Dominguez, Michael LaGamba, Tay Jun Hao</li>
           </ul>
           <div class="container-fluid">
             <div class="row">
