--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,14 +59,14 @@
     <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading clickable" (click)='onClickAccordion()'>
-          <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> Pro Tour Rivals of Ixalan Draft with Winning Records
+          <i class="fa fa-star" aria-hidden="true"></i> <strong>Featured:</strong> Pro Tour Dominaria Draft with Winning Records
           <i class='pull-right float-xs-right glyphicon'
       [ngClass]="{'glyphicon-chevron-down': isAccordionOpen, 'glyphicon-chevron-right': !isAccordionOpen}"></i>
         </div>
         <div class="panel-body" *ngIf='isAccordionOpen'>
           <ul class='list-unstyled'>
-            <li>3-0: Collin Rountree, Jon Stern</li>
-            <li>2-1: Benjamin Weitz, Israel Sanchez, Joseph Kambourakis, Javier Dominguez, Michael LaGamba, Tay Jun Hao</li>
+            <li>3-0: Jon Finkel</li>
+            <li>2-1: Joshua Vitullo, Ryoichi Tamada and Valerio Luminati</li>
           </ul>
           <div class="container-fluid">
             <div class="row">
