--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,8 +65,9 @@
         </div>
         <div class="panel-body" *ngIf='isAccordionOpen'>
           <ul class='list-unstyled'>
-            <li>3-0: Jon Finkel</li>
-            <li>2-1: Joshua Vitullo, Ryoichi Tamada and Valerio Luminati</li>
+            <li>3-0: Jon Finkel (day 1)</li>
+            <li>2-1: Joshua Vitullo, Ryoichi Tamada, Valerio Luminati, Andrea Mengucci, Ernest Lim, Jon Finkel (day 2) and Thomas Hendriks</li>
+            <li>Because of Pro Tour Pairings, there was no 3-0 on Day 2 Draft Pod</li>
           </ul>
           <div class="container-fluid">
             <div class="row">
